--- a/meu site/index.html
+++ b/meu site/index.html
@@ -21,8 +21,9 @@
      <h4>phyton</h4>
      <h4>java</h4>
      
-      <h3>contatos: 
-        ig:@ismaelnz_
+      <h3>contatos: </h3>
+        <ul>
+        </h3>ig:@ismaelnz_  
         tel: (86)97400-1609</h3>
 
      
