--- a/meu site/index.html
+++ b/meu site/index.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio-Ismael</title>
 </head>
-<body>
-    <h1>Ismael Sales</h1>
+<body> 'style="font-family:sans-seif;margin: 0; padding:0;''
+    <section style='background-color: rgb(92, 92, 100); color: rgb(70, 238, 140)';> 
+       <p style="padding 20px">;
+                                 <h1>Ismael Sales</h1>
 
 </body>
+<section style='background-color: rgb(39, 44, 58); color: rgb(40, 231, 168)';>
+    <p style="padding 20px">;
 <h1>Olá! sou ismael de sousa sales, estou no primeiro periodo de
      engenharia de sofware na universidade santo agostinho!</h1>
  <h3>Apredizado:</h3>
      <li>Algoritimo de programção</li>
      <li>arquitetura de sistemas </li>
      <li>ihc</li>
+
+</body>
  <h3>programa</h3>
  <ul>
      <h4>pascal</h4>
